# xinzuonew

./: .gitignore  GIT_WORKFLOW.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: book.rs  chapter.rs  entity.rs  foreshadow.rs  io.rs  mod.rs  settings.rs  snapshot.rs  stats.rs  volume.rs  window.rs
src-tauri/src/db/: book.rs  config.rs  global.rs  mod.rs  models.rs
src/api/: index.ts
src/components/: TutorialOverlay.tsx  UserAvatar.tsx
src/components/layout/: ExtraPanel.tsx  MainContent.tsx  PageHeader.tsx  Sidebar.tsx  Titlebar.tsx  index.ts
src/constants/: navigation.ts
src/hooks/: index.ts
src/pages/: InspirationCenter.tsx  LaunchPage.tsx  TaskCenter.tsx  ThemeSettings.tsx  TrashPage.tsx  WritingStats.tsx
src/pages/ContentManagement/: BookCard.tsx  ContentManagement.tsx  CreateBookDialog.tsx  index.tsx
src/pages/EditorPage/: AiPanel.tsx  ChapterExplorer.tsx  EditorArea.tsx  EditorPage.tsx  EntityPanel.tsx  ForeshadowPanel.tsx  LeftPanel.tsx  SearchOverlay.tsx  StatusBar.tsx  TabBar.tsx
src/stores/: index.ts  useBookStore.ts  useEditorStore.ts  useSettingStore.ts  useStatsStore.ts
src/themes/: default-dark.css  default.css
src/types/: index.ts
src/utils/: theme.ts
