[package]
name = "xinzuonew"
version = "0.1.0"
description = "心作 - 网文创作 IDE"
authors = ["you"]
edition = "2021"

[lib]
name = "xinzuonew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
thiserror = "1"
zip = "2"
dirs = "5"
